syntax = "proto3";

// protoc --go-grpc_out=. --go_out=. ./nexuscachepb/nexuscachepb.proto
package nexuscachepb;

option go_package = "./nexuscachepb";

message GetRequest{
  string  group = 1;
  string  key = 2;
}

message GetResponse {
  bytes value =1 ;
}

message SetRequest{
  string group = 1;
  string key = 2;
  bytes value = 3;
  int64 expire = 4;
  bool  ishot = 5;
}

message SetResponse{
  bool ok = 1;
}

service NexusCache {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
}
